--- a/index.html
+++ b/index.html
@@ -41,22 +41,46 @@
 
   <script>
     const clientes = {
-      "0YkosQFW7vSnnhUHBBtZ1t": {
-        nombre: "Oscar",
-        apellido: "Sierra",
-        nacimiento: "01/12/2001",
-        correo: "osierra@k1speed.mx",
-        telefono: "+52 55 1069 7445",
-        expiracion: "22/10/2025",
-      },
-      "39I7J02UGr6ICxUSE0oWCB": {
-        nombre: "Alfonso",
-        apellido: "Paredes",
-        nacimiento: "17/06/1988",
-        correo: "aparedes@k1speed.mx",
-        telefono: "+52 55 7445 1842",
-        expiracion: "22/10/2025",
-      }
+  "2vPjdRFSsDZG4CNNAaUEif": {
+    nombre: "Oscar",
+    apellido: "Sierra",
+    nacimiento: "01/12/2001",
+    correo: "osierra@k1speed.mx",
+    telefono: "+52 55 1069 7445",
+    expiracion: "09/07/2026",
+  },
+  "39I7J02UGr6ICxUSE0oWCB": {
+    nombre: "Alfonso",
+    apellido: "Paredes",
+    nacimiento: "17/06/1988",
+    correo: "aparedes@k1speed.mx",
+    telefono: "+52 55 7445 1842",
+    expiracion: "03/07/2026",
+  },
+  "2S1QmgnsQQJEYjAWelZThp": {
+    nombre: "Paulina",
+    apellido: "Enriquez",
+    nacimiento: "02/03/1992",
+    correo: "penriquez@k1speed.mx",
+    telefono: "+52 55 6323 4686",
+    expiracion: "25/06/2026",
+  },
+  "3IVygCV3Z2ZWX0Z0PIDKs0j": {
+    nombre: "Luis",
+    apellido: "Moreno",
+    nacimiento: "Desconocido",
+    correo: "lmoreno@k1speed.mx",
+    telefono: "+52 55 7745 4230",
+    expiracion: "25/06/2026",
+  },
+  "3gTco8aquN0kqsy0Cp6e7Tt": {
+    nombre: "Vane",
+    apellido: "Goeters",
+    nacimiento: "Desconocido",
+    correo: "vgoeters@k1speed.mx",
+    telefono: "+52 55 3041 6131",
+    expiracion: "25/06/2026",
+  }
     };
 
     const qrScanner = new Html5Qrcode("reader");
